--- a/app/src/main/res/layout/addhabit.xml
+++ b/app/src/main/res/layout/addhabit.xml
@@ -3,4 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+<!--  add stuff >:)  -->
+<!--  able to create checkboxes type stuff  -->
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
