--- a/app/src/main/res/layout/addhabit.xml
+++ b/app/src/main/res/layout/addhabit.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,25 +9,60 @@
 <!--  add stuff >:)  -->
 <!--  able to create checkboxes type stuff  -->
 
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="@string/HabitTrackerTitle"
+        android:textStyle="bold"
+        android:fontFamily="@font/Vertically"
+        android:textSize="55sp"
+        android:textAppearance="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/habitNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Habit Name"
+        android:hint="@string/HabitHint"
+        android:minHeight="48dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="48dp" />
+        tools:layout_editor_absoluteY="48dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleText"
+        android:autofillHints=""
+        android:inputType="text" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Habit"
-        android:onClick="onAddHabitClick" />
+        android:id="@+id/addHabits2"
+        style="@style/MyButton"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:text="@string/AddHabit"
+        android:textStyle="bold"
+        android:layout_weight="1"
+        android:onClick="onAddHabitClick"
+        app:layout_constraintEnd_toEndOf="@id/habitNameEditText"
+        app:layout_constraintStart_toStartOf="@id/habitNameEditText"
+        app:layout_constraintTop_toBottomOf="@id/habitNameEditText"/>
 
     <LinearLayout
         android:id="@+id/checkboxContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
