--- a/app/src/main/res/layout/mainwindow.xml
+++ b/app/src/main/res/layout/mainwindow.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:text="@string/HabitTrackerTitle"
         android:textStyle="bold"
-        android:fontFamily="@font/Vertically"
+        android:fontFamily="@font/vertically"
         android:textSize="55sp"
         android:textAppearance="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
