Load habits and view them in a list

--- a/app/src/main/res/layout/addhabit.xml
+++ b/app/src/main/res/layout/addhabit.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:text="@string/HabitTrackerTitle"
+        android:text="@string/addhabit_textview_title"
         android:textStyle="bold"
         android:fontFamily="@font/vertically"
         android:textSize="55sp"
@@ -30,36 +30,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:hint="Enter Habit Name"
+        android:hint="@string/addhabit_button_hint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="683dp"
-        android:onClick="onAddHabitClick"
-        android:text="Add Habit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:hint="@string/HabitHint"
-        android:minHeight="48dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="48dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleText"
-        android:autofillHints=""
-        android:inputType="text" />
 
     <Button
         android:id="@+id/addHabits2"
         style="@style/MyButton"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:text="@string/AddHabit"
+        android:text="@string/addhabit_button_add"
         android:textStyle="bold"
         android:layout_weight="1"
         android:onClick="onAddHabitClick"
