--- a/app/src/main/res/layout/addhabit.xml
+++ b/app/src/main/res/layout/addhabit.xml
@@ -16,9 +16,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:gravity="center"
-        android:text="@string/HabitTrackerTitle"
+        android:text="@string/addhabit_textview_title"
         android:textStyle="bold"
-        android:fontFamily="@font/vertically"
+        android:fontFamily="@font/Vertically"
         android:textSize="55sp"
         android:textAppearance="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="48dp"
-        android:hint="@string/HabitHint"
+        android:hint="@string/addhabit_button_hint"
         app:layout_constraintTop_toBottomOf="@id/titleText" />
 
     <LinearLayout
@@ -52,7 +52,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
-            android:text="@string/HabitHint"
+            android:text="@string/addhabit_button_hint"
             android:textStyle="bold"
             android:layout_weight="1" />
 
@@ -77,7 +77,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:text="@string/AddHabit"
+        android:text="@string/addhabit_button_add"
         android:textStyle="bold"
         android:layout_weight="1"
         android:onClick="onAddHabitClick"
@@ -92,7 +92,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintbott_toTopOf="parent"/>
+        app:layout_constraintBottom_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
