--- a/app/src/main/res/layout/viewhabits.xml
+++ b/app/src/main/res/layout/viewhabits.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context="com.example.habittracker.ViewHabits">
 
+    <!-- Image -->
+    <ImageView
+        android:id="@+id/viewhabits_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:alpha="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
     <TextView
         android:id="@+id/viewhabits_textview_title"
         android:layout_width="0dp"
