--- a/app/src/main/res/layout/addhabit.xml
+++ b/app/src/main/res/layout/addhabit.xml
@@ -30,7 +30,7 @@
         android:gravity="center"
         android:text="@string/addhabit_textview_title"
         android:textStyle="bold"
-        android:fontFamily="@font/vertically"
+        android:fontFamily="@font/bond"
         android:textSize="55sp"
         android:textAppearance="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
             android:layout_height="60dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:text="@string/addhabit_button_cancel"
+            android:text="@string/addhabit_button_back"
             android:textStyle="bold"
             android:layout_weight="1"
             tools:ignore="ButtonStyle" />
