--- a/app/src/main/res/layout/mainwindow.xml
+++ b/app/src/main/res/layout/mainwindow.xml
@@ -37,7 +37,7 @@
         android:gravity="center"
         android:text="@string/addhabit_textview_title"
         android:textStyle="bold"
-        android:fontFamily="@font/vertically"
+        android:fontFamily="@font/bond"
         android:textSize="55sp"
         android:textAppearance="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
