--- a/app/src/main/res/layout/viewhabits.xml
+++ b/app/src/main/res/layout/viewhabits.xml
@@ -22,7 +22,9 @@
         android:id="@+id/viewhabits_textview_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@android:dimen/app_icon_size"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
         android:fontFamily="@font/bond"
         android:gravity="center"
         android:text="@string/addhabit_textview_title"
