--- a/app/src/main/res/layout/addhabit.xml
+++ b/app/src/main/res/layout/addhabit.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Filename: addhabit.xml -->
+<!-- Assignment: Final Project -->
+<!-- Author: Rhys McCash, Andrew Babos, Hassan Alqhwaizi -->
+<!-- Student #: 8825169, 8822549, 8896386 -->
+<!-- Date: 4/19/2024 -->
+<!-- Description: The layout file for the adding a habit display -->
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,9 +25,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!--  add stuff >:)  -->
-    <!--  able to create checkboxes type stuff  -->
-
+    <!-- TextView for Title of Activity -->
     <TextView
         android:id="@+id/titleText"
         android:layout_width="0dp"
@@ -37,6 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- EditText for naming the habit -->
     <EditText
         android:id="@+id/habitNameEditText"
         android:layout_width="match_parent"
@@ -50,6 +57,7 @@
         android:hint="@string/addhabit_button_hint"
         app:layout_constraintTop_toBottomOf="@id/titleText" />
 
+    <!-- Spinner for frequency of habit -->
     <Spinner
         android:id="@+id/addhabit_spinner_habitFrequency"
         android:layout_width="match_parent"
@@ -60,6 +68,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp" />
 
+    <!-- Button layout for canceling -->
     <LinearLayout
         android:id="@+id/buttonLayout"
         android:layout_width="0dp"
@@ -84,6 +93,7 @@
 
     </LinearLayout>
 
+    <!-- Button to confirm the addition -->
     <Button
         android:id="@+id/addHabits2"
         style="@style/MyButton"
@@ -100,6 +110,7 @@
         app:layout_constraintStart_toStartOf="@id/habitNameEditText"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <!-- Checkboxes for the habits completion -->
     <LinearLayout
         android:id="@+id/checkboxContainer"
         android:layout_width="match_parent"
